--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.1",
   "description": "Web Server Rest API that retrieve data from ARCA",
   "main": "server.js",
+  "bin": "dist/server.js",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon",
-    "start": "ts-node --inspect=5858 src/server.ts",
-    "prod": "npm run build && npm run start"
+    "dev": "nodemon ts-node --inspect=5858 src/server.ts",
+    "start": "node dist/server.js",
+    "prod": "npm run build && npm run start",
+    "pkg": "npm run build && pkg . --debug --out-path build/"
   },
   "private": true,
   "author": "Luca Ciotti",
@@ -20,11 +22,18 @@
     "lodash": "^4.17.11",
     "node-adodb": "^4.2.2",
     "request": "^2.87.0",
-    "typescript-collections": "^1.3.2"
+    "typescript-collections": "^1.3.2",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "@types/morgan": "^1.7.35",
-    "morgan": "^1.9.0",
     "nodemon": "^1.18.3"
+  },
+  "pkg": {
+    "scripts": "dist/appConst.js",
+    "targets": [
+      "node4-win-x64",
+      "node4-win-x86"
+    ]
   }
 }
