--- a/package.json
+++ b/package.json
@@ -15,22 +15,30 @@
   "author": "Luca Ciotti",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.16.0",
-    "@types/request": "^2.47.1",
     "body-parser": "^1.18.3",
+    "config": "^2.0.1",
     "express": "^4.16.3",
     "lodash": "^4.17.11",
+    "morgan": "^1.9.0",
     "node-adodb": "^4.2.2",
     "request": "^2.87.0",
-    "typescript-collections": "^1.3.2",
-    "morgan": "^1.9.0"
+    "rotating-file-stream": "^1.3.9",
+    "typescript-collections": "^1.3.2"
   },
   "devDependencies": {
+    "@types/config": "0.0.34",
+    "@types/express": "^4.16.0",
     "@types/morgan": "^1.7.35",
-    "nodemon": "^1.18.3"
+    "@types/request": "^2.48.1",
+    "nodemon": "^1.18.6"
   },
   "pkg": {
-    "scripts": "dist/appConst.js",
+    "scripts": [
+      "dist/appConst.js"
+    ],
+    "assets": [
+      "config/default.json"
+    ],
     "targets": [
       "node4-win-x64",
       "node4-win-x86"
