--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "config": "^2.0.1",
+    "config": "^2.0.2",
+    "dateformat": "^3.0.3",
+    "excel4node": "^1.7.0",
     "express": "^4.16.3",
+    "json-query": "^2.2.2",
     "lodash": "^4.17.11",
     "morgan": "^1.9.0",
     "node-adodb": "^4.2.2",
@@ -30,14 +33,15 @@
     "@types/express": "^4.16.0",
     "@types/morgan": "^1.7.35",
     "@types/request": "^2.48.1",
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.7"
   },
   "pkg": {
     "scripts": [
       "dist/appConst.js"
     ],
     "assets": [
-      "config/default.json"
+      "config/default.json",
+      "node_modules/config/**/*.*"
     ],
     "targets": [
       "node4-win-x64",
