--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.3",
     "json-query": "^2.2.2",
     "lodash": "^4.17.11",
+    "log4js": "^6.1.1",
     "morgan": "^1.9.0",
     "node-adodb": "^4.2.2",
     "request": "^2.87.0",
