--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "express": "^4.16.3",
     "json-query": "^2.2.2",
     "lodash": "^4.17.11",
-    "log4js": "^6.1.1",
     "morgan": "^1.9.0",
     "node-adodb": "^4.2.2",
     "request": "^2.87.0",
     "rotating-file-stream": "^1.3.9",
-    "typescript-collections": "^1.3.2"
+    "typescript-collections": "^1.3.2",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@types/config": "0.0.34",
@@ -42,7 +42,8 @@
     ],
     "assets": [
       "config/default.json",
-      "node_modules/config/**/*.*"
+      "node_modules/config/**/*.*",
+      "node_modules/log4js/**/*.*"
     ],
     "targets": [
       "node4-win-x64",
